--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,127 @@
-.test {
-  color: red;
+$base-width: 1200px;
+
+body {
+  background-color: #cccccc;
+  font-family: 'Roboto', sans-serif;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .container {
+    width: 100%;
+  }
+  .header {
+    padding: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: $base-width;
+    margin: 0 auto;
+  }
+}
+
+.header__flex,
+.description {
+  display: flex;
+}
+
+.header {
+  background-color: black;
+  color: white;
+  height: 42px;
+  padding: 10px;
+  font-size: 40px;
+}
+
+.header_links {
+  display: inline-block;
+  vertical-align: top;
+  padding-top: 7px;
+}
+
+.header a {
+  color: #5d5d5d;
+  text-decoration: none;
+  font-size: 12px;
+  display: block;
+}
+
+.header__flex {
+  justify-content: space-between;
+}
+
+.description {
+  display: flex;
+  justify-content: flex-end;
+  text-align: right;
+  line-height: 1.5;
+  padding: 10px;
+}
+
+.description .title {
+  color: black;
+}
+
+.description .title {
+  color: black;
+  font-size: 17px;
+}
+
+.description .title_below {
+  color: #333333;
+  font-size: 15px;
+}
+
+.right {
+  text-align: right;
+  font-size: 15px;
+}
+
+.description {
+  margin-top: 30px;
+}
+
+.description p {
+  font-size: 20px;
+}
+
+.description img {
+  max-width: 70px;
+  padding:0 0 15px 15px;
+}
+
+.content {
+  height: 500px;
+  background-color: white;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.col-sm-l {
+  width: 25%;
+  background-color: white;
+}
+
+.col-sm-r {
+  width: 75%;
+  background-color: black;
+}
+
+.blue_bottom{
+  background-color: #3fa9f5;
+  width: 100%;
+  height: 40px;
+  margin-top: 460px;
+  text-align: center;
+  color: white;
+}
+
+.blue_bottom span {
+  line-height: 2.4;
 }
